# moodle-h5p-course-sync

./: .env.example  .gitignore  LICENSE  QUESTIONS_RELEASE_WORKFLOW.md  README.md  h5p-cli-1.1.5.tgz  instructions.md  prepare.sh  pyproject.toml  requirements.txt  tasks.py
.githooks/: pre-push
.github/workflows/: pages.yml
course_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
courses/algorithmen-2026/: index.mdx
courses/h5p-demo/: index.mdx
courses/h5p-demo-en/: index.mdx
courses/java-course/: .moodle-target-2.yml  index.mdx
courses/miniworlds_examples/: index.mdx
courses/oop-2026/: index.mdx
courses/python-2026/: .course-sync.json  index.mdx
docs/: content-example.yml  course-format.md  getting-started.md
h5p-webplayer/: README.md  server.py
libraries/H5P.CodeQuestion-6.73/: DEVELOP.md  library.json
libraries/H5P.LibCodeTools-6.73/: library.json
libraries/H5P.PythonQuestion-6.73/: library.json  libraryRegistry.json  semantics.json
scripts/: _http_client.py  _service_registry.py  main.py
scripts/classes/: __init__.py  content_store.py  course_orchestrator.py  h5p_file_service.py  h5p_import_mapper.py  h5p_library_manager.py  h5p_package_builder.py  markdown_renderer.py  mdx_course_parser.py  models.py  moodle_playwright_uploader.py  preview_controller.py  preview_http_handler.py  (+8 more)
tests/: test_classes_services.py  test_cli_runner.py  test_component_syncer.py  test_course_sync.py  test_h5p_demo_workflow.py  test_moodle_playwright_uploader.py  test_preview_server.py  test_python_runner_policy.py
tools/: course_sync.py
(+772 files in other folders)
